# jvm-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
ch01_cmd/: Cargo.toml  README.md
ch05_instructions/: Cargo.toml  MEADME.md
ch05_instructions/src/: cmd.rs
ch05_instructions/src/classfile/: attribute_info.rs  class_file.rs  constant_pool.rs
ch05_instructions/src/classfile/attribute_info/: code.rs  constant_value.rs  exceptions.rs  local_variable_table.rs  local_variable_type_table.rs  signature.rs  source_file.rs  unparsed.rs
ch05_instructions/src/classfile/constant_pool/: string.rs
ch05_instructions/src/instructions/: factory.rs  interpret.rs  mod.rs
ch05_instructions/src/instructions/comparisons/: if_acmp.rs  lcmp.rs
ch05_instructions/src/instructions/constants/: mod.rs
ch05_instructions/src/instructions/control/: mod.rs
ch05_instructions/src/instructions/extended/: ifnull.rs  mod.rs  wide.rs
ch05_instructions/src/instructions/loads/: aload.rs  dload.rs  fload.rs  iload.rs  lload.rs
ch05_instructions/src/instructions/math/: iinc.rs  or.rs  rem.rs  sh.rs
ch05_instructions/src/instructions/stack/: dup.rs
ch05_instructions/src/instructions/stores/: astore.rs  dstore.rs  fstore.rs  istore.rs  lstore.rs
ch05_instructions/src/rtda/: local_var.rs  object.rs  operand_stack.rs  thread.rs  types.rs
ch07_method_invoke/: Cargo.toml  README.md
ch07_method_invoke/resource/jvmrust/ch07/: FibonacciTest.java
ch07_method_invoke/src/: cmd.rs  logger.rs  main.rs
ch07_method_invoke/src/classfile/: attribute_info.rs
ch07_method_invoke/src/classfile/attribute_info/: code.rs  types.rs
ch07_method_invoke/src/classfile/constant_pool/: invoke_dynamic.rs
ch07_method_invoke/src/classpath/: classpath_impl.rs  wildcard_entry.rs
ch07_method_invoke/src/instructions/: errors.rs  mod.rs
ch07_method_invoke/src/instructions/base/: bytecode_reader.rs
ch07_method_invoke/src/instructions/constants/: consts.rs  ipush.rs
ch07_method_invoke/src/instructions/control/: mod.rs  tableswitch.rs
ch07_method_invoke/src/instructions/conversions/: d2x.rs  mod.rs
ch07_method_invoke/src/instructions/extended/: goto_w.rs
ch07_method_invoke/src/instructions/math/: mod.rs  neg.rs  xor.rs
ch07_method_invoke/src/instructions/references/: getstatic.rs  invokeinterface.rs  invokevirtual.rs  new.rs  putstatic.rs
ch07_method_invoke/src/instructions/stack/: mod.rs
ch07_method_invoke/src/instructions/stores/: astore.rs  mod.rs
ch07_method_invoke/src/rtda/: local_var.rs  operand_stack.rs  thread.rs
(+243 files in other folders)
