[package]
name = "jvm-rs"
version = "0.1.0"
edition = "2021"
description = " JVM implemented in rust."
repository = "https://github.com/JasonkayZK/jvm-rs"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "ch01_cmd",
    "ch02_classpath",
    "ch03_classfile",
    "ch04_rtda",
    "ch05_instructions",
    "ch06_rtda_heap",
    "ch07_method_invoke",
]

[workspace.dependencies]
clap = { version = "4.4.8", features = ["derive"] }
thiserror = { version = "1.0" }
