[package]
name = "ch05_instructions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
