[package]
name = "ch07_method_invoke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
log = { version = "0.4" }
